k8s/overlays/local/observability/grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: monitoring
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: grafana
